--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
   "dependencies": {
     "@hono/node-server": "^1.13.8",
     "cors": "^2.8.5",
-    "dotenv": "16.4.7",
+    "dotenv": "^16.4.7",
+    "drizzle-orm": "^0.40.0",
     "hono": "^4.7.2",
+    "pg": "^8.13.3",
     "postgres": "^3.4.5"
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
-    "tsx": "^4.7.1"
+    "@types/pg": "^8.11.11",
+    "drizzle-kit": "^0.30.5",
+    "tsx": "^4.19.3"
   }
 }
